# golden

./: .autotools  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.status  configure  configure.ac  drafts.c  vlegrand@bic-soft.sis.pasteur.fr
Dummy/Dummy/: Dummy.1  main.c
Dummy/Dummy.xcodeproj/: project.pbxproj
Dummy/Dummy.xcodeproj/xcuserdata/vlegrand.xcuserdatad/xcschemes/: Dummy.xcscheme  xcschememanagement.plist
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: misc_all1.txt  nt_10_first.txt  nt_ac_extracts.txt  nt_enzyme_only.txt  nt_misc.txt  nt_misc_uniprot.txt  nt_misc_uniprot_missing_doublons.txt  nt_uniprot_only.txt  prosite.txt  rdpii.txt  taxo.txt
data_scripts/: extract_bank_ac.awk  extract_test_data.sh  extract_test_data_v1.sh
doc/: Makefile  Makefile.am  Makefile.in  golden.man  golden.pod  goldin.man  goldin.pod
golden-1.1a.xcodeproj/: project.pbxproj
golden-1.1a.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
golden-1.1a.xcodeproj/xcuserdata/vlegrand.xcuserdatad/xcschemes/: golden-1.1a.xcscheme  xcschememanagement.plist
golden-3.0.xcodeproj/: project.pbxproj
golden-3.0.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
golden-3.0.xcodeproj/xcuserdata/vlegrand.xcuserdatad/xcschemes/: golden-1.1a.xcscheme  xcschememanagement.plist
perf_test/: taxo_test_4_Vero.py  taxo_test_golden_multi.py  test_golden_multi
python/: Golden.c  MANIFEST.in  Makefile  Makefile.am  Makefile.in  entryIterator.py  setup.py
src/: .gdbinit  .lldbinit  Makefile  Makefile.am  Makefile.in  access.c  access.h  config.h  config.h.in  entry.c  entry.h  error.c  error.h  golden  golden.c  goldin  goldin.c  goldin_options.c  goldin_options.h  goldin_utils.c  goldin_utils.h  index.c  index.h  index_desc.c  index_desc.h  index_hl.c  index_hl.h  index_utils.c  list.c  list.h  locus.c  locus.h  perf_tests.c  query.c  query.h  trace4.txt  unit_tests.c
src/.deps/: access.Po  entry.Po  error.Po  golden.Po  goldin.Po  index.Po  list.Po  locus.Po
src/ProfileResults2.trace/Trace1.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults2.trace/Trace2.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults2.trace/Trace5.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults2.trace/Trace6.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace1.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace2.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace3.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace4.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace5.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace6.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
src/ProfileResults_goldin.trace/Trace7.run/: 4C48231D-3012-454B-8C3F-014FEF176501-sampler.data
test/: Makefile  Makefile.am  Makefile.in  embl_in.txt  genbank_in.txt  golden.sh  golden_test_method.py  goldin.sh  prosite_in.txt  virtual.sh
test/all/: wgs_extract.1.gbff  wgs_extract.2.gbff
test/data/: embl_in.txt  prosite_in.txt
test/unit/: db_test.dbx  enzyme_extract.dat.dbx  enzyme_extract_unsorted_idx1.idx  genbank_test.dbx  genbank_test_to_concat.dbx  long_path.dbx  wgs_extract.1.gnp  wgs_extract.3.gnp
test/unit/wgs2/: wgs_extract.2.gnp
